# rune-etching-rust

./: Cargo.toml  README.md
src/: main.rs
src/utils/: mod.rs  rpc_client.rs
