[package]
name = "custom_rune"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
argh = "0.1.12"
bitcoin = { version = "0.31", features = ["serde"] }
env_logger = "0.11.5"
log = "0.4.22"
ord-rs = { version = "0.3.0", features = ["rune"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "trust-dns",
] }
serde = { version = "1.0", features = ["derive"] }
hex = "0.4.3"
ordinals = "0.0.9"
